

AM_CPPFLAGS=@AM_CPPFLAGS@ -Werror $(MARTOPROGS_BUILD_CPPFLAGS)
AM_CFLAGS=@AM_CFLAGS@ $(STD_C99_FLAGS) $(MARTOPROGS_BUILD_CFLAGS)
AM_CXXFLAGS=@AM_CXXFLAGS@ $(STD_CXX0X_FLAGS)
AM_LDFLAGS=@AM_LDFLAGS@ $(MARTOPROGS_BUILD_LDFLAGS)
AM_LIBS=@AM_LIBS@ $(MARTOPROGS_BUILD_LIBS)

jsq_SOURCES=jsq.c++

noinst_PROGRAMS=   \
  jsq

